chore: fixed approval workflow

--- a/.github/workflows/desktop-app-cd-nightly-approval.yml
+++ b/.github/workflows/desktop-app-cd-nightly-approval.yml
@@ -60,14 +60,12 @@ jobs:
           git config --global core.eol lf
 
       - uses: actions/checkout@v3
-        with:
-          ref: master
 
       - uses: actions/checkout@v3
         if: ${{ env.TEAM_REPOSITORY != '' }}
         with:
           repository: ${{ env.TEAM_REPOSITORY }}
-          ref: main
+          ref: development
           token: ${{ secrets.GH_TOKEN }}
           path: leapp-team
 
@@ -76,7 +74,7 @@ jobs:
         run: |
           mv leapp-team ..
           cd ../leapp-team/packages/leapp-team-service
-          npm run enable-team-features-prod
+          npm run enable-team-features-dev
 
       - name: Build Win desktop app (nightly)
         shell: bash
@@ -118,21 +116,21 @@ jobs:
     needs: [ build-and-release-core-and-cli, generate-build-identifier ]
     steps:
       - uses: actions/checkout@v3
-        with:
-          ref: master
+
       - uses: actions/checkout@v3
         if: ${{ env.TEAM_REPOSITORY != '' }}
         with:
           repository: ${{ env.TEAM_REPOSITORY }}
-          ref: main
+          ref: development
           token: ${{ secrets.GH_TOKEN }}
           path: leapp-team
+
       - name: Inject Team Feature
         if: ${{ env.TEAM_REPOSITORY != '' }}
         run: |
           mv leapp-team ..
           cd ../leapp-team/packages/leapp-team-service
-          npm run enable-team-features-prod
+          npm run enable-team-features-dev
 
       - name: Build Linux desktop app (nightly)
         run: |
@@ -176,22 +174,21 @@ jobs:
     needs: [ build-and-release-core-and-cli, generate-build-identifier ]
     steps:
       - uses: actions/checkout@v3
-        with:
-          ref: master
 
       - uses: actions/checkout@v3
         if: ${{ env.TEAM_REPOSITORY != '' }}
         with:
           repository: ${{ env.TEAM_REPOSITORY }}
-          ref: main
+          ref: development
           token: ${{ secrets.GH_TOKEN }}
           path: leapp-team
+
       - name: Inject Team Feature
         if: ${{ env.TEAM_REPOSITORY != '' }}
         run: |
           mv leapp-team ..
           cd ../leapp-team/packages/leapp-team-service
-          npm run enable-team-features-prod
+          npm run enable-team-features-dev
 
       - name: Build macOS x64 desktop app (nightly)
         uses: nick-fields/retry@v2
@@ -261,7 +258,6 @@ jobs:
         with:
           name: Leapp-${{ steps.release.outputs.TAG_VERSION }}.dmg
           path: packages/desktop-app/release/Leapp-${{ steps.release.outputs.TAG_VERSION }}.dmg
-
 
   build-macos-arm:
     runs-on: macos-latest
