chore: added localstack documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,6 +30,7 @@ nav:
           - 'Configure AWS IAM User': 'configuring-session/configure-aws-iam-user.md'
           - 'Configure AWS IAM Role Federated': 'configuring-session/configure-aws-iam-role-federated.md'
           - 'Configure AWS IAM Role Chained': 'configuring-session/configure-aws-iam-role-chained.md'
+          - 'Configure Localstack': 'configuring-session/configure-localstack.md'
       - 'Configuring an Integration':
           - 'Configure AWS Single Sign-On integration': 'configuring-integration/configure-aws-single-sign-on-integration.md'
           - 'Configure Azure integration': 'configuring-integration/configure-azure-integration.md'
