--- a/.github/workflows/desktop-app-cd-nightly-approval.yml
+++ b/.github/workflows/desktop-app-cd-nightly-approval.yml
@@ -91,15 +91,9 @@ jobs:
           rm "./release/Leapp-$TAG_VERSION-win.zip" ||:
           powershell "Compress-Archive './release/Leapp Setup $TAG_VERSION.exe' './release/Leapp-$TAG_VERSION-win.zip'"
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-1
-
-      - name: prepare tag version for artifact upload
+      - name: Prepare tag version for artifact upload
         id: release
+        shell: bash
         run: |
           cd packages/desktop-app
           TAG_VERSION=$(cat nightly-version)
@@ -143,14 +137,7 @@ jobs:
           rm -Rf ./release/builder-debug.yml
           rm -Rf ./release/builder-effective-config.yaml
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-1
-
-      - name: prepare tag version for artifact upload
+      - name: Prepare tag version for artifact upload
         id: release
         run: |
           cd packages/desktop-app
@@ -161,7 +148,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: Leapp-${{ steps.release.outputs.TAG_VERSION }}_amd64.deb
-          path: packages/desktop-app/release/Leapp-${{ steps.release.outputs.TAG_VERSION }}_amd64.deb
+          path: packages/desktop-app/release/Leapp_${{ steps.release.outputs.TAG_VERSION }}_amd64.deb
 
       - name: Upload artifacts (.AppImage)
         uses: actions/upload-artifact@v3
@@ -199,29 +186,6 @@ jobs:
           max_attempts: 5
           command: |
             cd packages/desktop-app
-            KEY_CHAIN=build.keychain
-            CERTIFICATE_P12=certificate.p12
-            CERTIFICATE_APPLICATION_P12=certificate-application.p12
-            echo "Recreate the certificate from the secure environment variable"
-            echo "security create-keychain"
-            echo "${{ env.CERTIFICATE_OSX_P12 }}" | base64 --decode > $CERTIFICATE_P12
-            echo "${{ env.CERTIFICATE_APPLICATION_OSX_P12 }}" | base64 --decode > $CERTIFICATE_APPLICATION_P12
-            security create-keychain -p ${{ env.KEYCHAIN_PASSWORD }} $KEY_CHAIN
-            echo "security list-keychains"
-            security list-keychains -s login.keychain build.keychain
-            echo "security default-keychain"
-            security default-keychain -s $KEY_CHAIN
-            echo "security unlock-keychain"
-            security unlock-keychain -p ${{ env.KEYCHAIN_PASSWORD }} $KEY_CHAIN
-            echo "security import"
-            security import $CERTIFICATE_P12 -k $KEY_CHAIN -P '${{ env.DECODE_PASSWORD }}' -T /usr/bin/codesign;
-            security import $CERTIFICATE_APPLICATION_P12 -k $KEY_CHAIN -P '${{ env.DECODE_PASSWORD }}' -T /usr/bin/codesign;
-            echo "security find-identity"
-            security find-identity -v
-            echo "security set-key-partition-list"
-            security set-key-partition-list -S apple-tool:,apple:,codesign:, -s -k ${{ env.KEYCHAIN_PASSWORD }} $KEY_CHAIN
-            rm -fr *.p12
-
             npm install
             npm run set-target-x64
             npm run nightly
@@ -239,14 +203,7 @@ jobs:
           rm "./release/Leapp-$TAG_VERSION-mac.zip.blockmap"
           zip "./release/Leapp-$TAG_VERSION-mac.zip" "./release/Leapp-$TAG_VERSION.dmg"
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-1
-
-      - name: prepare tag version for artifact upload
+      - name: Prepare tag version for artifact upload
         id: release
         run: |
           cd packages/desktop-app
@@ -289,29 +246,6 @@ jobs:
           max_attempts: 5
           command: |
             cd packages/desktop-app
-            KEY_CHAIN=build.keychain
-            CERTIFICATE_P12=certificate.p12
-            CERTIFICATE_APPLICATION_P12=certificate-application.p12
-            echo "Recreate the certificate from the secure environment variable"
-            echo "security create-keychain"
-            echo "${{ env.CERTIFICATE_OSX_P12 }}" | base64 --decode > $CERTIFICATE_P12
-            echo "${{ env.CERTIFICATE_APPLICATION_OSX_P12 }}" | base64 --decode > $CERTIFICATE_APPLICATION_P12
-            security create-keychain -p ${{ env.KEYCHAIN_PASSWORD }} $KEY_CHAIN
-            echo "security list-keychains"
-            security list-keychains -s login.keychain build.keychain
-            echo "security default-keychain"
-            security default-keychain -s $KEY_CHAIN
-            echo "security unlock-keychain"
-            security unlock-keychain -p ${{ env.KEYCHAIN_PASSWORD }} $KEY_CHAIN
-            echo "security import"
-            security import $CERTIFICATE_P12 -k $KEY_CHAIN -P '${{ env.DECODE_PASSWORD }}' -T /usr/bin/codesign;
-            security import $CERTIFICATE_APPLICATION_P12 -k $KEY_CHAIN -P '${{ env.DECODE_PASSWORD }}' -T /usr/bin/codesign;
-            echo "security find-identity"
-            security find-identity -v
-            echo "security set-key-partition-list"
-            security set-key-partition-list -S apple-tool:,apple:,codesign:, -s -k ${{ env.KEYCHAIN_PASSWORD }} $KEY_CHAIN
-            rm -fr *.p12
-
             npm install
             npm run set-target-arm64
             npm run nightly
@@ -330,14 +264,7 @@ jobs:
           rm "./release/Leapp-$TAG_VERSION-arm64-mac.zip.blockmap"
           zip "./release/Leapp-$TAG_VERSION-mac-arm64.zip" "./release/Leapp-$TAG_VERSION-arm64.dmg"
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-1
-
-      - name: prepare tag version for artifact upload
+      - name: Prepare tag version for artifact upload
         id: release
         run: |
           cd packages/desktop-app
@@ -349,3 +276,20 @@ jobs:
         with:
           name: Leapp-${{ steps.release.outputs.TAG_VERSION }}-arm64.dmg
           path: packages/desktop-app/release/Leapp-${{ steps.release.outputs.TAG_VERSION }}-arm64.dmg
+
+  post-to-slack:
+    runs-on: ubuntu-latest
+    needs: [ build-win, build-linux, build-macos-x64, build-macos-arm ]
+    steps:
+      - name: Post to Slack
+        id: slack
+        uses: slackapi/slack-github-action@v1.24.0
+        with:
+          # Slack channel id, channel name, or user id to post message.
+          # See also: https://api.slack.com/methods/chat.postMessage#channels
+          # You can pass in multiple channels to post to by providing a comma-delimited list of channel IDs.
+          channel-id: "C05S4TSQ919"
+          # For posting a simple plain text message
+          slack-message: "${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}} approval builds: https://github.com/Noovolari/leapp/actions/runs/${{ github. run_id }}"
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_TOKEN }}
