chore: reintroduced sign for mac

--- a/.github/workflows/desktop-app-cd-nightly-approval.yml
+++ b/.github/workflows/desktop-app-cd-nightly-approval.yml
@@ -242,7 +242,7 @@ jobs:
 
   build-macos-arm:
     runs-on: macos-latest
-    needs: [ build-and-release-core-and-cli, generate-build-identifier ]
+    needs: [ build-and-release-core-and-cli, generate-build-identifier, build-macos-x64]
     steps:
       - uses: actions/checkout@v3
 
