chore: attempt to solve node-gyp distutils error in GitHub workflow

--- a/.github/workflows/cli-ci-cd-prod.yml
+++ b/.github/workflows/cli-ci-cd-prod.yml
@@ -50,6 +50,7 @@ jobs:
           npm run enable-team-features-prod
       - name: Bootstrap
         run: |
+          python3 -m pip install packaging
           npm run bootstrap
       - name: Build CLI
         run: |
