chore: attempt to solve node-gyp distutils error in GitHub workflow

--- a/.github/workflows/cli-ci-cd-prod.yml
+++ b/.github/workflows/cli-ci-cd-prod.yml
@@ -50,6 +50,11 @@ jobs:
           npm run enable-team-features-prod
       - name: Bootstrap
         run: |
+          printenv
+          echo $PATH
+          which python
+          which python3
+          which python2
           python3 -m pip install packaging
           npm run bootstrap
       - name: Build CLI
