--- a/.github/workflows/cli-ci-cd-prod.yml
+++ b/.github/workflows/cli-ci-cd-prod.yml
@@ -34,6 +34,9 @@ jobs:
           ref: main
           token: ${{ secrets.GH_TOKEN }}
           path: leapp-team
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
       - name: Inject Team Feature
         if: ${{ env.TEAM_REPOSITORY != '' }}
         run: |
@@ -50,12 +53,6 @@ jobs:
           npm run enable-team-features-prod
       - name: Bootstrap
         run: |
-          printenv
-          echo $PATH
-          which python
-          which python3
-          which python2
-          python3 -m pip install packaging
           npm run bootstrap
       - name: Build CLI
         run: |
