chore: setting python 3.11 version in desktop app ci/cd

--- a/.github/workflows/desktop-app-cd-prod.yml
+++ b/.github/workflows/desktop-app-cd-prod.yml
@@ -74,6 +74,9 @@ jobs:
           ref: main
           token: ${{ secrets.GH_TOKEN }}
           path: leapp-team
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
       - name: Inject Team Feature
         if: ${{ env.TEAM_REPOSITORY != '' }}
         run: |
