chore: added analytics service

--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -160,7 +160,7 @@
     "@ngx-translate/core": "~13.0.0",
     "@ngx-translate/http-loader": "~6.0.0",
     "@noovolari/dpapi-addon": "0.1.2",
-    "@noovolari/leapp-core": "0.1.150",
+    "@noovolari/leapp-core": "file:../core",
     "@types/aws-sdk": "^2.7.0",
     "assert": "2.0.0",
     "aws-sdk": "2.928.0",
@@ -175,18 +175,16 @@
     "copy-dir": "~1.3.0",
     "crypto-js": "4.2.0",
     "date-fns": "^2.26.0",
-    "emoji-regex": "^8.0.0",
-    "is-fullwidth-code-point": "^3.0.0",
-    "strip-ansi": "^6.0.1",
+    "electron-default-menu": "~1.0.2",
     "electron-dl": "3.2.1",
     "electron-is-dev": "2.0.0",
-    "electron-default-menu": "~1.0.2",
     "electron-localshortcut": "^3.2.1",
     "electron-log": "~4.3.4",
     "electron-notarize": "~1.0.0",
     "electron-osx-sign": "~0.5.0",
     "electron-reload": "^1.5.0",
     "electron-updater": "^4.3.8",
+    "emoji-regex": "^8.0.0",
     "extract-zip": "~2.0.1",
     "fix-path": "~3.0.0",
     "folder-hash": "^4.0.2",
@@ -196,6 +194,9 @@
     "github-url-to-object": "^4.0.6",
     "http-proxy-agent": "4.0.1",
     "https-proxy-agent": "5.0.0",
+    "i18next": "~21.4.2",
+    "i18next-http-backend": "~1.3.1",
+    "is-fullwidth-code-point": "^3.0.0",
     "is-url": "^1.2.4",
     "js-ini": "1.5.1",
     "jwt-decode": "~3.1.2",
@@ -212,6 +213,7 @@
     "node-ipc": "9.2.1",
     "node-log-rotate": "~0.1.5",
     "node-machine-id": "~1.1.12",
+    "posthog-js": "^1.93.2",
     "reflect-metadata": "^0.1.13",
     "require-module": "^0.1.0",
     "rimraf": "~3.0.2",
@@ -220,6 +222,7 @@
     "semver": "7.5.3",
     "standard-version": "^9.3.0",
     "stream-browserify": "3.0.0",
+    "strip-ansi": "^6.0.1",
     "sudo-prompt": "~9.2.1",
     "tar": "^6.1.11",
     "tslib": "^2.3.1",
@@ -229,9 +232,7 @@
     "wait-on": "^6.0.0",
     "ws": "^8.9.0",
     "zlib": "~1.0.5",
-    "zone.js": "~0.11.4",
-    "i18next": "~21.4.2",
-    "i18next-http-backend": "~1.3.1"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.2.2",
@@ -269,12 +270,12 @@
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "~1.5.4",
     "karma-requirejs": "^1.1.0",
+    "ng-packagr": "13.2.1",
     "node-abi": "^2.26.0",
     "nyc": "^15.1.0",
     "protractor": "^7.0.0",
     "ts-node": "^9.1.1",
     "typescript": "4.5.5",
-    "util": "^0.12.4",
-    "ng-packagr": "13.2.1"
+    "util": "^0.12.4"
   }
 }
