chore: update cli pipeline

--- a/.github/workflows/cli-ci-cd-prod.yml
+++ b/.github/workflows/cli-ci-cd-prod.yml
@@ -115,6 +115,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
+      - uses: actions/setup-python@v4
+      with:
+        python-version: "3.11"
       - name: Bootstrap
         run: |
           npm run bootstrap
