fix: fixed issue in CLI CI/CD

--- a/.github/workflows/cli-ci-cd-prod.yml
+++ b/.github/workflows/cli-ci-cd-prod.yml
@@ -118,6 +118,20 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.11"
+      - name: Inject Team Feature
+        if: ${{ env.TEAM_REPOSITORY != '' }}
+        run: |
+          cd packages/core
+          npm install
+          npm run build
+          cd ../..
+          mv leapp-team ..
+          cd ../leapp-team/packages/leapp-team-core
+          npm run bootstrap
+          cd ../leapp-team-service
+          npm install
+          npm run test
+          npm run enable-team-features-prod
       - name: Bootstrap
         run: |
           npm run bootstrap
