fix: fixed issue in CLI CI/CD

--- a/.github/workflows/cli-ci-cd-prod.yml
+++ b/.github/workflows/cli-ci-cd-prod.yml
@@ -115,6 +115,13 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
+      - uses: actions/checkout@v3
+        if: ${{ env.TEAM_REPOSITORY != '' }}
+        with:
+          repository: ${{ env.TEAM_REPOSITORY }}
+          ref: main
+          token: ${{ secrets.GH_TOKEN }}
+          path: leapp-team
       - uses: actions/setup-python@v4
         with:
           python-version: "3.11"
