--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Leapp",
-  "version": "0.23.0",
+  "version": "0.23.1",
   "private": true,
   "author": {
     "name": "Noovolari",
@@ -115,13 +115,13 @@
         {
           "target": "zip",
           "arch": [
-            "x64"
+            "arm64"
           ]
         },
         {
           "target": "dmg",
           "arch": [
-            "x64"
+            "arm64"
           ]
         }
       ]
