--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,10 @@ nav:
           - Profile: 'cli/scopes/profile.md'
           - Region: 'cli/scopes/region.md'
           - 'Idp Url': 'cli/scopes/idp-url.md'
+          - 'Set Workspace': 'cli/scopes/set-workspace.md'
+          - 'Workspace': 'cli/scopes/workspace.md'
+          - 'Team': 'cli/scopes/team.md'
+          - 'Version': 'cli/scopes/version.md'
   - 'Configuration':
       - 'Add your first configuration': 'configuration.md'
       - 'Configuring a Session':
@@ -64,6 +68,7 @@ nav:
   - 'Roadmap': https://roadmap.leapp.cloud/tabs/4-in-progress
   - Contributing:
       - 'Get involved': 'contributing/get-involved.md'
+      - 'Useful Scripts': 'usefull-scripts/export-profile.md'
   - Troubleshooting:
       - 'Application Data': 'troubleshooting/app-data.md'
       - 'FAQ': 'troubleshooting/faq.md'
