--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -265,6 +265,7 @@
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "^6.3.2",
     "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "^2.2.1",
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-firefox-launcher": "^2.1.0",
     "karma-jasmine": "~4.0.1",
